# TerraDash

./: CMakeLists.txt
include/: Animation.h  Game.h  Level.h  Player.h  Resources.h  database.h
src/: Game.cpp  Game.h  database.cpp  main.cpp
src/Game Elements/: Collidable.cpp  Collidable.h  Level.cpp  Level.h  Player.cpp  Player.h
src/Graphics/: Animation.cpp  Animation.h  Resources.cpp  Resources.h
